# url-shortener

./: docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: redirect.py  urls.py
backend/app/core/: config.py
backend/app/db/: base.py  cache.py
backend/app/models/: url.py
backend/app/schemas/: url.py
backend/app/services/: url_service.py
backend/tests/: conftest.py  test_redirect.py  test_url_service.py  test_urls_route.py
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: urls.ts
frontend/src/components/: ResultBanner.tsx  ShortenForm.tsx  UrlRow.tsx  UrlTable.tsx
frontend/src/types/: url.ts
